@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD pmake-0.ebuild 579 RMD160 c3bba1ed204f11d6907ab1f25e715d7657faf5ad SHA1 80ea6a8c2c78fa80f00770bf0a549c218ccaac25 SHA256 d128f51c13de9fb279e58076a0ba17baf31d6d0ee5d673c6ca63198bdac776f5
-MISC ChangeLog 984 RMD160 e6a5355a6af773cd3aa1c979208c5d1a11e9f3cc SHA1 28c5343f30752846a5a118ebd61627e9db16e169 SHA256 cd46ad44a97611d09e3f1d70becf7e454a6d97375d0f22646dcbb33a47196e11
+EBUILD pmake-0.ebuild 596 RMD160 532a843f6cab66e3641d5b95fd848ee0f958683f SHA1 8510f68f828b4a3958c44ac08af6abba8b84dca7 SHA256 71b95a321618ec7dd87f0c3edcbb39b3406e6b1bb13e4ac93572fcf98adb57a4
+MISC ChangeLog 1080 RMD160 b8570cd0e2d55b1afd73a674ee44198471f1b87d SHA1 7c2a32a6c297aa02df053f4129062bbe9d7bda9a SHA256 7e875a1a70b09c3ed81de8a063509f72fa55cc0ffba7241ff75d6c70275ca388
 MISC metadata.xml 156 RMD160 60b5820a08275f307e5bd936d78f5afd1f141086 SHA1 d9d9d4f2b5afc58339ea3e562fca490156935f1f SHA256 30ab515d6ac492d3d6c36ac3c675511742c2149e56a6b3228c8d22ab8edb3ff7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAktLB4AACgkQOeoy/oIi7uzUzwCgxdh+RVf5Tf3104r4tABDtFMx
-CR8Ani4ekCC4tZg3pk6PGA7LahfPoNnq
-=xfjn
+iEYEARECAAYFAk+ZRDYACgkQvFcC4BYPU0p4SgCaA4TSIMOHT04kJIN4WsxePVoJ
+1cYAnR8lo7JxSqj7hvRZEcDJsocXXZ1J
+=ANGz
 -----END PGP SIGNATURE-----
