@@ -1,6 +1,9 @@
 # ChangeLog for virtual/pmake
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/pmake/ChangeLog,v 1.7 2010/01/11 11:09:09 ulm Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/pmake/ChangeLog,v 1.8 2012/04/26 12:48:49 aballier Exp $
+
+  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> pmake-0.ebuild:
+  keyword ~amd64-fbsd
 
   11 Jan 2010; Ulrich Mueller <ulm@gentoo.org> pmake-0.ebuild:
   Set empty HOMEPAGE and LICENSE.
